--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "moment": "^2.30.1",
-    "puppeteer-core": "^24.2.1",
+    "puppeteer": "^24.2.1",
     "xlsx": "^0.18.5"
   }
 }
